--- a/styles.css
+++ b/styles.css
@@ -330,6 +330,9 @@ footer p {
   letter-spacing: var(--spacing);
   margin-bottom: 0;
 }
+.expert__service__header{
+  margin:30px ;
+}
 
 .top-link {
   font-size: 1.25rem;
@@ -363,15 +366,7 @@ footer p {
     transform: scale(1);
   }
 }
-.section1__for__both__aside {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-.first__aside__contact {
-  max-width: 50%;
-  margin-top: 25px;
-}
+
 .para__main__top {
   color: rgb(7, 7, 7);
   font-weight: 600;
@@ -379,7 +374,7 @@ footer p {
 }
 .for__from__main {
   min-width: 300px;
-  height: 60vh;
+  min-height: 60vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -395,7 +390,13 @@ footer p {
   border-radius: 8px;
   box-shadow: 10px 5px 8px rgb(60, 49, 49);
 }
+.service__both__content__form{
+  
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
 
+}
 .para__for__1st__sec,
 .para__for__1st__sec_info {
   text-align: left;
@@ -458,6 +459,7 @@ li {
   font-weight: 600;
   color: black;
 }
+
 .for__services__main{
   display: flex;
   flex-direction: row;
@@ -486,4 +488,132 @@ li {
   transform: scale(1.05);
   box-shadow: 0 0 21px rgba(33,33,33,.2); 
   z-index: 0;
+}
+.aside__contact__two2{
+  margin-left:20px ;
+}
+
+.first__aside__contact{
+  max-width: 50%
+}
+@media only screen and (max-width: 900px) {
+  .first__aside__contact{
+    max-width: 100%;
+  }
+  .service__both__content__form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .section1__for__both__aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    
+  }
+  /* .first__aside__contact {
+    
+   
+    margin-top: 25px;
+    
+  }  */
+  h2{
+  font-size: 1.5rem;
+  }
+  .expert__service__header{
+    width: 100%;
+  }
+  .section1__for__both__aside{
+   max-width: 100%;
+  }
+  .container{
+    width: 100%;
+  }
+  .form__for__style {
+    height: 500px;
+    width: 420px;
+    background-color: rgb(210, 224, 224);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 8px;
+    box-shadow: 10px 5px 8px rgb(60, 49, 49);
+    margin-bottom: 60px;
+  }
+  .aside__contact{
+    margin: 50px;
+    
+  }
+}
+@media only screen and (max-width: 600px) {
+  .first__aside__contact{
+    margin: 20px;
+  }
+  .section1__for__both__aside {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    
+  }
+  .first__aside__contact {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+    margin-top: 25px;
+    
+  } 
+  h2{
+  font-size: 1.5rem;
+  }
+  .expert__service__header{
+    width: 100%;
+  }
+  .section1__for__both__aside{
+   max-width: 100%;
+  }
+  .container{
+    width: 100%;
+  }
+  .form__for__style {
+    height: 500px;
+    width: 320px;
+    background-color: rgb(210, 224, 224);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 8px;
+    box-shadow: 10px 5px 8px rgb(60, 49, 49);
+    margin-bottom: 60px;
+  }
+  .aside__contact{
+    margin: 20px;
+  }
+  .li_for_about{
+    line-height: normal;
+    font-size: medium;
+  }
+}
+@media only screen and (max-width: 290px) {
+  .form__for__style{
+    width: 200px;
+  }
+  input{
+    width: 150px;
+  }
+  textarea{
+    width: 150px;
+  }
+  .button__form__submit{
+    width: 140px;
+  }
+  .first__aside__contact{
+    margin: 0px;
+  }
+
 }
